tests/result/fail/types/array-error.fail.cpp
#include "tim/result/Result.hpp"


int main() { int main() { tim::Result<int, int[4]> r; } }
